feat: Add rendered images to job summary

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -47,6 +47,9 @@ jobs:
           path: tests/generated_svg/
           if-no-files-found: error # the tests should generate SVGs files
 
+      - name: Adding markdown
+        run: echo '### Hello world! :rocket:' >> $GITHUB_STEP_SUMMARY
+
       - name: Test installation in virtualenv
         run: make test_install ANSIBLE_VERSION=${{ matrix.ansible-version }}
 
