--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -48,9 +48,10 @@ jobs:
           if-no-files-found: error # the tests should generate SVGs files
 
       - name: Adding markdown
-        run: | 
+        run: |
+          env
           echo '### Hello world! :rocket:' >> $GITHUB_STEP_SUMMARY
-          echo '![Example](./img/example.png)' >> $GITHUB_STEP_SUMMARY
+          echo '![Example](https://raw.githubusercontent.com/haidaraM/ansible-playbook-grapher/main/img/example.png)' >> $GITHUB_STEP_SUMMARY
 
       - name: Test installation in virtualenv
         run: make test_install ANSIBLE_VERSION=${{ matrix.ansible-version }}
